@@ -4,6 +4,7 @@ import javafx.concurrent.Task;
 import javafx.event.ActionEvent;
 import javafx.event.EventHandler;
 import javafx.geometry.Insets;
+import javafx.geometry.Pos;
 import javafx.scene.control.Button;
 import javafx.scene.layout.*;
 
@@ -29,30 +30,20 @@ public class Applet extends Pane {
 
         Rectangle background = new Rectangle();
 
-        background.setHeight(100);
+
+        background.setHeight(130);
         background.setWidth(200);
         background.setArcHeight(15);
         background.setArcWidth(15);
         background.setFill(Color.LIGHTGREY);
 
-        //background.setClip(background);
-        /*if (application.running) {
-            background.setBackground(new Background(new BackgroundFill(Color.RED, CornerRadii.EMPTY, Insets.EMPTY)));
-        } else {
-            this.setBackground(new Background(new BackgroundFill(Color.GREY, CornerRadii.EMPTY, Insets.EMPTY)));
-        }*/
+        //Applet Container
+        VBox vBoxContainer = new VBox();
 
-        this.setVisible(true);
+        //BUTTONS
+        Button editButton = new Button();
+        editButton.setGraphic(Icon.EDIT.getIcon(15,15));
 
-
-        // UI for applet
-        GridPane appletUi = new GridPane();
-        appletUi.setPadding(new Insets(10));
-        appletUi.setVgap(5);
-        appletUi.setHgap(5);
-
-        Text appletName = new Text(application.name);
-        Button editButton = new Button("edit");
         Button startButton = new Button("");
         startButton.setGraphic(Icon.PLAY.getIcon(15,15));
 
@@ -63,13 +54,52 @@ public class Applet extends Pane {
         Button filesButton = new Button("Files");
         filesButton.setGraphic(Icon.FOLDER.getIcon(15,15));
 
-        appletUi.add(appletName, 0, 0);
-        appletUi.add(editButton, 2, 0);
-        appletUi.add(startButton, 0, 1);
-        appletUi.add(stopButton, 1, 1);
-        appletUi.add(filesButton, 2, 1);
 
-        this.getChildren().addAll(background, appletUi);
+        //Namebar
+
+
+
+        RecktanglePane nameBar = new RecktanglePane(Color.PALEVIOLETRED, 30, 200, 15, 15);
+        HBox namebarHBox = new HBox();
+        Text appletName = new Text(application.name);
+        Region spacing = new Region();
+        namebarHBox.setPadding(new Insets(4, 10, 0, 10));
+        namebarHBox.getChildren().addAll(appletName, spacing, editButton);
+        HBox.setHgrow(spacing, Priority.ALWAYS);
+
+
+        nameBar.getChildren().add(namebarHBox);
+        nameBar.setVisible(true);
+
+
+
+
+
+
+        this.setVisible(true);
+
+
+        // Table for applet
+        GridPane appletUiTable = new GridPane();
+        appletUiTable.setPadding(new Insets(10));
+        appletUiTable.setVgap(5);
+        appletUiTable.setHgap(5);
+
+
+
+
+
+
+
+        //appletUiTable.add(appletName, 0, 0);
+        //appletUiTable.add(editButton, 2, 0);
+        appletUiTable.add(startButton, 0, 1);
+        appletUiTable.add(stopButton, 1, 1);
+        appletUiTable.add(filesButton, 2, 1);
+
+
+        vBoxContainer.getChildren().addAll(nameBar, appletUiTable);
+        this.getChildren().addAll(background, vBoxContainer);
 
 
 
@@ -104,25 +134,63 @@ public class Applet extends Pane {
                     @Override
                     protected Integer call() throws Exception {
                         int id = 1;
+                        long pid = 0;
+                        Process process = null;
                         try {
-                            ProcessBuilder processBuilder = new ProcessBuilder();
-                            processBuilder.command("C:\\Program Files (x86)\\Microsoft\\Edge\\Application\\msedge.exe");
-                            Process process = processBuilder.start();
-                            id = process.waitFor();
-                        } catch (IOException e) {
-                            throw new RuntimeException(e);
-                        }
+                            //ProcessBuilder processBuilder = new ProcessBuilder();
+                            //processBuilder.command(application.scriptPath);
+                            //processBuilder.directory(new File("C:\\Users\\ASUS\\Desktop\\bat_cmds\\testMCserver"));
+                            //processBuilder.command("java -jar C:\\Users\\ASUS\\Desktop\\bat_cmds\\testMCserver\\paper.jar");
+                            process = Runtime.getRuntime().exec("java -jar C:\\Users\\ASUS\\Desktop\\bat_cmds\\testMCserver\\paper.jar", null, new File("C:\\Users\\ASUS\\Desktop\\bat_cmds\\testMCserver"));
+                            System.out.println("1");
+                            //process = processBuilder.start();
 
+                            pid = process.pid();
+                            System.out.println(pid);
+                            System.out.println(process.getOutputStream());
+                            id = process.waitFor();
+
+                        } catch (InterruptedException e) {
+                            /*Process killProcess = null;
+                            System.out.println("Exiting gracefully");
+                            ProcessBuilder pb = new ProcessBuilder();
+                            pb.command("taskkill /pid " + pid);*/
+                            //process.input
+                            Process killProcess = Runtime.getRuntime().exec("taskkill /pid " + pid);
+                            //killProcess.;
+
+
+                            process.destroy();
+
+                        }
                         return id;
                     }
                 };
 
                 new Thread(scriptTask).start();
-                scriptTask.setOnSucceeded(e -> {
+                scriptTask.setOnRunning(e -> {
                     background.setFill(Color.LIGHTBLUE);
+                });
+                scriptTask.setOnSucceeded(e -> {
+                    background.setFill(Color.LIGHTGREY);
+                });
+                scriptTask.setOnFailed(e -> {
+                    background.setFill(Color.LIGHTGREY);
+                });
+                scriptTask.setOnCancelled(e -> {
+                    background.setFill(Color.LIGHTGREY);
+                });
+
+                stopButton.setOnAction(new EventHandler<ActionEvent>() {
+                    @Override
+                    public void handle(ActionEvent actionEvent) {
+                        scriptTask.cancel();
+                    }
                 });
             }
         });
+
+
 
 
 
@@ -141,7 +209,7 @@ public class Applet extends Pane {
                 int id = 1;
                 try {
                     ProcessBuilder processBuilder = new ProcessBuilder();
-                    processBuilder.command("C:\\Program Files (x86)\\Microsoft\\Edge\\Application\\msedge.exe");
+                    processBuilder.command(application.scriptPath);
                     Process process = processBuilder.start();
                     id = process.waitFor();
                 } catch (IOException e) {
